2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh: bugfix

2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl:
	  Updated based on the mplabx-2.25.

2014-11-09  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh:
	  Ignore the content of "; Build date : ..." line in the .inc files.

2014-10-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl: bugfix

2014-09-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/cfg-import.pl
	  tools/device-help.pl, tools/device-manager.pl:
	  Updated unto the Perl 5.16 version.

2014-08-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl: bugfix

2014-08-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Corrected the rfPIC12F509.. to rfPIC12C509 and
	  renamed the data sheet search buttons.

2014-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Can to search the data sheet of the processors.

2014-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Improved the recognition of the Common RAM.

2014-08-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Improved the recognition of the Common RAM.

2014-07-31  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Adapted to the modified px structure.
