@@ -319,8 +319,7 @@ my @mcu_missed_debug =
   'PIC16LF1934', 'PIC16F1936', 'PIC16LF1936', 'PIC16F1937',
   'PIC16LF1937', 'PIC16F1938', 'PIC16LF1938', 'PIC16F1939',
   'PIC16LF1939', 'PIC16F1946', 'PIC16LF1946', 'PIC16F1947',
-  'PIC16LF1947',
-  'PIC16F18855', 'PIC16LF18855', 'PIC16F18875', 'PIC16LF18875'
+  'PIC16LF1947'
   );
 
 # The Microchip created faulty database: 8bit_device.info
