@@ -1,4 +1,8 @@
 2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/cfg-import.pl, tools/device-help.pl:
+	  bugfix
+
+2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/cmp_gp_mp.sh: bugfix
 
 2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
